--- a/BookingSoftware/View/ForgetPasswordPage.xaml
+++ b/BookingSoftware/View/ForgetPasswordPage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="FranceVacanses.View.ForgetPasswordPage"
+    x:Class="BookingSoftware.View.ForgetPasswordPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:FranceVacanses.View"
+    xmlns:local="using:BookingSoftware.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
