--- a/BookingSoftware/View/LoginPage.xaml
+++ b/BookingSoftware/View/LoginPage.xaml
@@ -72,7 +72,7 @@
                         <TextBlock HorizontalAlignment="Left"
                                Height="45"
                                TextWrapping="Wrap"
-                               Margin="40,0,0,200"
+                               Margin="40,0,0,550"
                                Width="380"
                                Text="U S E R N A M E"
                                Foreground="#FFE4B9B9"
@@ -84,7 +84,7 @@
                              Width="400"
                              Height="45"
                              HorizontalAlignment="Left"
-                             Margin="40,0,0,150"
+                             Margin="40,0,0,500"
                              Grid.ColumnSpan="3"
                              FontFamily="segoe ui"
                              FontSize="30"
@@ -94,7 +94,7 @@
                                Height="45"
                                Width="380"
                                TextWrapping="Wrap"
-                               Margin="40,0,0,0"
+                               Margin="40,0,0,350"
                                Text="P A S S W O R D"
                                Foreground="#FFE4B9B9"
                                FontWeight="Bold"
@@ -105,7 +105,7 @@
                                  Width="400"
                                  Height="45"
                                  Grid.ColumnSpan="3"
-                                 Margin="40,50,0,0"
+                                 Margin="40,0,0,300"
                                  HorizontalAlignment="Left"
                                  FontSize="30"/>
 
@@ -115,7 +115,7 @@
                             Height="53"
                             HorizontalAlignment="Left"
                             FontSize="24"
-                            Margin="40,260,0,0"
+                            Margin="40,0,0,100"
                             Grid.ColumnSpan="3" 
                             Background="#FF1F5BA5" 
                             FontFamily="Segoe UI Light"
@@ -123,15 +123,14 @@
 
                     
                         <Button x:Name="ForgotPassword"
-                            Height="55"
+                            Height="40"
                             Width="400"
                             Content="Forgot password?"
-                            HorizontalAlignment="Center"
                             Foreground="White"
-                            Margin="0,440,0,0"
+                            Margin="40,50,0,0"
                             FontSize="18"
                             FontFamily="Segoe UI Light"
-                            Grid.Column="1" 
+                            Grid.ColumnSpan="3" 
                             FocusVisualSecondaryBrush="Transparent" 
                             FocusVisualPrimaryBrush="#FF747373"
                             Command="{Binding ShowResetPassword}"
@@ -188,20 +187,21 @@
                                      Margin="0,10,0,0"
                                      FontSize="20"/>
 
-                            <ComboBox x:Name="ComboBox" 
-                                      PlaceholderText="Gender"
-                                      Height="53" 
-                                      Width="400" 
-                                      Margin="0,10,0,0"
-                                      FontSize="20"
-                                      DisplayMemberPath="Source" 
-                                      HorizontalAlignment="Center" 
-                                      VerticalAlignment="Top" Opacity="0.7"
-                                      ItemsSource="{Binding genders}"
-                                      >
-                                                              
-                                                                                       
-                            </ComboBox>
+                            <StackPanel>
+
+                                <RadioButton x:Name = "male" 
+                                         Margin = "100,30,0,0" 
+                                         IsChecked="{Binding Gender, Mode=TwoWay}"
+                                         GroupName="Gender"
+                                         Content = "Male" />
+
+                                <RadioButton x:Name = "female" 
+                                         Margin = "200,-33,0,0" 
+                                         IsChecked="{Binding Gender, Mode=TwoWay}"
+                                         GroupName = "Gender" 
+                                         Content = "Female" />
+                            </StackPanel>
+
 
                             <Button x:Name="SignUpBtn"
                                     Command="{Binding CreateAccount}"
