Added fields to the sign up, changed button color

--- a/BookingSoftware/View/LoginPage.xaml
+++ b/BookingSoftware/View/LoginPage.xaml
@@ -42,7 +42,7 @@
         </StackPanel>
 
         <StackPanel Width="550"
-                    Height="980"
+                    Height="1000"
                     Margin="0,0,0,0" PointerEntered="PointerEntered" PointerExited="PointerExited">
 
             <Image Source="/Assets/2.png" 
@@ -118,11 +118,11 @@
                             FontSize="24"
                             Margin="40,0,0,100"
                             Grid.ColumnSpan="3" 
-                            Background="#FF1F5BA5" 
+                            Background="#FF3E8140" 
                             FontFamily="Segoe UI Light"
                             Command ="{Binding LogIn}" />
 
-                    
+
                         <Button x:Name="ForgotPassword"
                             Height="40"
                             Width="400"
@@ -131,10 +131,12 @@
                             Margin="40,50,0,0"
                             FontSize="18"
                             FontFamily="Segoe UI Light"
-                            Grid.ColumnSpan="3" 
+                            Grid.ColumnSpan="3"
                             FocusVisualSecondaryBrush="Transparent" 
                             FocusVisualPrimaryBrush="#FF747373"
-                            Command="{Binding ShowResetPassword}"
+                            Command="{Binding ShowResetPassword}" 
+                            Opacity="0.8" 
+                            Background="#FF263878"
                             />
                     </Grid>
                 </PivotItem>
@@ -150,15 +152,21 @@
                             <RowDefinition Height="auto"/>
                         </Grid.RowDefinitions>
                         <StackPanel Grid.Row="0"
-                                    PointerEntered="PointerEntered" PointerExited="PointerExited" HorizontalAlignment="Stretch" Height="437" Margin="0,0,0,0" VerticalAlignment="Top">
+                                    PointerEntered="PointerEntered" 
+                                    PointerExited="PointerExited" 
+                                    HorizontalAlignment="Stretch" 
+                                    Height="900" 
+                                    Margin="0,0,0,0" 
+                                    VerticalAlignment="Top">
+
                             <TextBox x:Name="SignUpEmailBox"
                                      Text="{Binding User.Email, Mode=TwoWay}"
                                      PlaceholderText="Enter your email address"
                                      Width="400"
-                                     Height="53"
+                                     Height="45"
                                      HorizontalAlignment="Center"
                                      VerticalAlignment="Top"
-                                     Margin="0,20,0,0"
+                                     Margin="0,30,0,0"
                                      FontSize="20"
                                      PointerEntered="PointerEntered" PointerExited="PointerExited"/>
 
@@ -168,8 +176,8 @@
                                          HorizontalAlignment="Center"
                                          VerticalAlignment="Top"
                                          Width="400"
-                                         Height="53"
-                                         Margin="0,10,0,0"
+                                         Height="45"
+                                         Margin="0,20,0,0"
                                          FontSize="20"
                                          PointerEntered="PointerEntered" PointerExited="PointerExited"/>
 
@@ -178,8 +186,8 @@
                                          HorizontalAlignment="Center"
                                          VerticalAlignment="Top"
                                          Width="400"
-                                         Height="53"
-                                         Margin="0,10,0,0"
+                                         Height="45"
+                                         Margin="0,20,0,0"
                                          FontSize="20"
                                          PointerEntered="PointerEntered" PointerExited="PointerExited"/>
 
@@ -187,14 +195,15 @@
                                      Text="{Binding User.Name, Mode=TwoWay}"
                                      PlaceholderText="Enter your full name"
                                      Width="400"
-                                     Height="53"
+                                     Height="45"
                                      HorizontalAlignment="Center"
                                      VerticalAlignment="Top"
-                                     Margin="0,10,0,0"
+                                     Margin="0,20,0,0"
                                      FontSize="20"
                                      PointerEntered="PointerEntered" PointerExited="PointerExited"/>
 
-                            <StackPanel>
+                            <StackPanel
+                                Margin="0,-15,0,0">
 
                                 <RadioButton x:Name = "male" 
                                          Margin = "100,30,0,0" 
@@ -211,18 +220,34 @@
                                          PointerEntered="PointerEntered" PointerExited="PointerExited"/>
                             </StackPanel>
 
+                            <TextBox x:Name="Address"
+                                     Text="{Binding User.Address, Mode=TwoWay}"
+                                     PlaceholderText="Enter your address"
+                                     Width="400"
+                                     Height="45"
+                                     HorizontalAlignment="Center"
+                                     VerticalAlignment="Top"
+                                     Margin="0,10,0,0"
+                                     FontSize="20"/>
+
+                            <TextBlock Text="Pick your birth date: "
+                                       HorizontalAlignment="Center"
+                                       Margin="0,40,0,0" />
+
+                            <DatePicker x:Name="BirthDate"
+                                        Margin="0,20,0,0"
+                                        HorizontalAlignment="Center"/>
 
                             <Button x:Name="SignUpBtn"
                                     Command="{Binding CreateAccount}"
                                     IsEnabled="{Binding CreateAccountBtnVisible}"
                                     Width="400"
                                     Height="53"
-                                    VerticalAlignment="Top"
                                     HorizontalAlignment="Center"
                                     Content="Sign up"
                                     FontSize="24"
-                                    Background="#FF1F5BA5"
-                                    Margin="0,40,0,20"/>
+                                    Background="#FF3E8140"
+                                    Margin="0,100,0,0"/>
                         </StackPanel>
                         <StackPanel Grid.Row="1">
                             <!--<ItemsControl Height="230" ItemsSource="{Binding Errors.Errors}">
