--- a/BookingSoftware/View/LoginPage.xaml
+++ b/BookingSoftware/View/LoginPage.xaml
@@ -2,7 +2,6 @@
     x:Class="BookingSoftware.View.LoginPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BookingSoftware.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
@@ -41,7 +40,7 @@
             </interactivity:Interaction.Behaviors>
         </StackPanel>
 
-        <StackPanel Width="550"
+        <StackPanel Width="auto"
                     Height="1000"
                     Margin="0,0,0,0" PointerEntered="PointerEntered" PointerExited="PointerExited">
 
@@ -120,7 +119,7 @@
                             Grid.ColumnSpan="3" 
                             Background="#FF3E8140" 
                             FontFamily="Segoe UI Light"
-                            Command ="{Binding LogIn}" />
+                            Command ="{Binding LogIn}" Click="LoginBtn_Click"/>
 
 
                         <Button x:Name="ForgotPassword"
@@ -140,12 +139,14 @@
                             />
                     </Grid>
                 </PivotItem>
+                
                 <PivotItem 
                            Height="auto"
                            Header="Sign up" 
                            HorizontalAlignment="Center" 
                            VerticalAlignment="Top"
                            PointerEntered="PointerEntered" PointerExited="PointerExited">
+
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto" />
@@ -166,7 +167,7 @@
                                      Height="45"
                                      HorizontalAlignment="Center"
                                      VerticalAlignment="Top"
-                                     Margin="0,30,0,0"
+                                     Margin="0,20,0,0"
                                      FontSize="20"
                                      PointerEntered="PointerEntered" PointerExited="PointerExited"/>
 
@@ -232,10 +233,10 @@
 
                             <TextBlock Text="Pick your birth date: "
                                        HorizontalAlignment="Center"
-                                       Margin="0,40,0,0" />
+                                       Margin="0,20,0,0" />
 
                             <DatePicker x:Name="BirthDate"
-                                        Margin="0,20,0,0"
+                                        Margin="0,10,0,0"
                                         HorizontalAlignment="Center"/>
 
                             <Button x:Name="SignUpBtn"
@@ -247,7 +248,7 @@
                                     Content="Sign up"
                                     FontSize="24"
                                     Background="#FF3E8140"
-                                    Margin="0,100,0,0"/>
+                                    Margin="0,20,0,0"/>
                         </StackPanel>
                         <StackPanel Grid.Row="1">
                             <!--<ItemsControl Height="230" ItemsSource="{Binding Errors.Errors}">
